<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_custom_msg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="m.gomez03016@gmail.com">mario</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building and executing the package -->
  <depend>rclcpp</depend>

  <!-- Dependencies for building the package -->
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Dependencies required at runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Group association for ROSIDL packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Dependencies for testing the package -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
